--- a/src/todo
+++ b/src/todo
@@ -1,1 +1,8 @@
+//TODO 
+
 *on changing quantity add animation to emoji size increase then normal!
+
+*for different users show different data, manange db like that!
+*use localstorage if needed
+
+*add emptystate
