--- a/src/todo
+++ b/src/todo
@@ -1,5 +1,9 @@
 //TODO 
 
+*make responsive
+
+*change github repo readme
+
 *on changing quantity add animation to emoji size increase then normal!
 
 *for different users show different data, manange db like that!
