loading spinner added

--- a/src/todo
+++ b/src/todo
@@ -13,3 +13,7 @@
 *add loading data
 
 *add filter options to use firebase query like sort, price range etc.
+
+*add (+) floating icon can be added on mobile view
+
+*add buy option and make admin dashboard
