--- a/todo
+++ b/todo
@@ -4,9 +4,13 @@
 
 *on changing quantity add animation to emoji size increase then normal!
 
-*lots on animations can be added on click and hover
 
+---------------- No Time -----------------
 *add (+) floating icon can be added on mobile view and show only when scrolled
+
+*add undo option, show after deleting emoji
+
+*Favourite can be added
 
 *pagination can be added
 
@@ -14,14 +18,15 @@
 
 *add buy option and make admin dashboard
 
+--------------------Postponded----------------------
+*for different users show different data, manange db like that ,use localstorage if needed
+#Requires user id details, not suitable for this UI.
+
 
 --------------------DONE----------------------
 *make responsive
 *add loading spinner
 *add emptystate
 *add animation on hover on emojis
-
---------------------Postponded----------------------
-*for different users show different data, manange db like that ,use localstorage if needed
-#Requires user id details, not suitable for this UI.
-
+*if quantity==0 disable minus btn, change cursor
+*lots on animations can be added on click and hover
