more transition added

--- a/todo
+++ b/todo
@@ -6,6 +6,8 @@
 ---------------- No Time -----------------
 *add (+) floating icon can be added on mobile view and show only when scrolled
 
+* back to top can be added
+
 *add undo option, show after deleting emoji
 
 *Favourite can be added
